syntax = "proto3";

package silenteight.datasource.api.location.v1;

import "google/api/annotations.proto";

option java_package = "com.silenteight.datasource.api.location.v1";
option java_outer_classname = "LocationProto";
option java_multiple_files = true;

service LocationInputService {
  rpc BatchGetMatchLocationInputs (BatchGetMatchLocationInputsRequest) returns (stream BatchGetMatchLocationInputsResponse) {
    option (google.api.http) = {
      post: "/agent-inputs/location/versions/v1/matches:batchGet"
      body: "*"
    };
  }
}

message BatchGetMatchLocationInputsRequest {
  // The list of matches data is requested for, in form of `alerts/<Alert ID>/matches/<Match ID>`.
  repeated string matches = 1;
  // The list of features the input data for each match is requested, in form of `features/<Feature ID>`.
  repeated string features = 2;
}

message BatchGetMatchLocationInputsResponse {
  repeated LocationInput location_inputs = 1;
}

/**
  Location is a full text description
  example: "Jerozolimskie 2/50, 01-200 Warszawa, mazowieckie, Poland"
 */
message LocationInput {
  string match = 1;
  repeated LocationFeatureInput location_feature_inputs = 2;
}

message LocationFeatureInput {
  string feature = 1;
  repeated string alerted_party_locations = 2;
  repeated string watchlist_locations = 3;
}
